source/blender/depsgraph/intern/depsgraph.cc
@@ -62,6 +62,8 @@ namespace blender::deg {
 Depsgraph::Depsgraph(Main *bmain, Scene *scene, ViewLayer *view_layer, eEvaluationMode mode)
     : time_source(nullptr),
       need_update(true),
+      need_visibility_update(true),
+      need_visibility_time_update(false),
       bmain(bmain),
       scene(scene),
       view_layer(view_layer),
